<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pizza"
            android:icon="@drawable/pizza"
            android:title="@string/pizza" />

        <item
            android:id="@+id/nav_cocktails"
            android:icon="@drawable/icon_cocktail"
            android:title="@string/cocktails" />

        <item
            android:id="@+id/nav_pasta"
            android:icon="@drawable/pasta"
            android:title="@string/pasta" />
    </group>

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_contact_us"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/share_app"
            android:icon="@drawable/ic_share_app"
            android:title="@string/share_app" />
    </group>

</menu>